CHANGELOG

== Apr 21, 2012
* Added Resque Scheduler for Publication Date in items
* Scheduling Twitter Status updates (resque-scheduler)
* Scheduling Email Notifications
* Updated RSPEC tests

== Apr 20, 2012
* Added CSS Style for Emails

== Apr 19, 2012
* Added Email Subscriptions
* Added PostmarkApp for sending emails
* Changed Logging style
* Added Rspec Tests for email subscriptions

== Apr 18, 2012
* Improved Author Page
* Added more Rspec Tests
* fixed bug on author page with avatar
* Added Category to admin/items index page
* Added Youtube screenshot to admin/items
* Added Youtube ID with link to admin/items
* Thumbnail on admin/items opens the item itself
* Added Video to item page in admin
* Added Comments count under mini item divs
* Increased padding in some parts for nicer look

== Apr 17, 2012
* Added Site Settings
* Resque-History
* Added GA
* Test job added

== Apr 16, 2012
* Added Flattr
* Removed Facebook
* Added for testing jquery.wysiwyg Editor
* Improved Comment style

== Apr 13, 2012
* Internal Commenting System completed
* Added avatar image to user profile
* Reduced memcached caching to 2 hours
* Moved solr similar items to cached fragment block
* Added Comments to Admin interface

== Apr 10, 2012
* Updated to Rails 3.2.3, fixed security vulnerabilities

== Apr 07, 2012
* Removed twitter Javascript helper
* Changed links from https to http for sharing icons
* Added resque take task back
* Added AddressBook
* country-select gem

== Apr 06, 2012
* Twitter updating is now using a Resque Queue
* jQuery-rails 1.7.2 update
* Back to using Resque

== Apr 01, 2012
* Fixed caching bug if item Images were modified
* Improved Item Cache Key to included last image timestamp
* Improved Item cache key to use human readable timestamps
* Revamped RSS/Atom Feeds
* Added basic Rspec Tests for RSS/Atom feeds
* Updated Feed Titles to match site name
* Improved Attachments Admin interface (/admin/attachments/1234)