@@ -252,3 +252,8 @@ img.youtube_mini {
   max-width: 80px;
   max-height: 80px;
 }
+
+
+table.index_table tr.even td.status {
+  background: #DDD;
+}
