@@ -1,6 +1,6 @@
 class EmailDelivery < ActiveRecord::Base
   belongs_to :item
-  # attr_accessible :title, :body
+  belongs_to :user
   
   after_create :enqueue
   
